# certification_v2

./: .env.example  README.MD  groups_fixture.json  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_title.py
users/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
